--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --russian-violet: #1e0c3fff;
-  --rebecca-purple: #59368fff;
-  --periwinkle: #e8d2ffff;
-  --dark-purple: #130c25ff;
+  --color-primary: #1e0c3fff;
+  --color-secondary: #59368fff;
+  --color-neutral: #e8d2ffff;
+  --color-complementary: #130c25ff;
 }
-
