--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,4 +5,8 @@
   --color-secondary: #59368fff;
   --color-neutral: #e8d2ffff;
   --color-complementary: #130c25ff;
+
+  /* Font variables from astro experimentals fonts .astro.config.mjs */
+  --font-primary: var(--font-space-mono);
+  --font-secondary: var(--font-raleway);
 }
