--- a/src/layouts/DashboardLayout.astro
+++ b/src/layouts/DashboardLayout.astro
@@ -22,10 +22,10 @@ const author = 'angelcruzsanchez126@gmail.com'
 
     <title>{title}</title>
   </head>
-  <body class='scroll-smooth'>
+  <body class='scroll-smooth bg-dark-purple'>
     <!-- Todo: Agregar header -->
 
-    <main class='mb-20'>
+    <main class='flex'>
       <slot />
     </main>
 
