--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -1,8 +1,10 @@
 ---
 import DashboardLayout from '@layouts/DashboardLayout.astro'
 import Sidebar from '@components/dashboard/ui/Sidebar.astro'
+import Navigation from './Navigation.astro'
 ---
 
 <DashboardLayout title='Dashboard'>
   <Sidebar />
+  <Navigation />
 </DashboardLayout>
