--- a/src/pages/dashboard/Navigation.astro
+++ b/src/pages/dashboard/Navigation.astro
@@ -24,8 +24,8 @@ const isActive = (href: string) => currentPath === href
 ---
 
 <aside
-  class='fixed  left-24 z-40 
-    md:block md:w-56 md:h-screen
+  class='left-24 z-40 
+    md:block md:w-56 h-screen
     bg-complementary/95 backdrop-blur-sm border-r border-primary
     shadow-lg shadow-primary/10
     flex flex-col'
