--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,21 +1,21 @@
 ---
-import Head from '@components/seo/Head.astro'
-import '@styles/global.css'
+import Head from "@components/seo/Head.astro";
+import "@styles/global.css";
 
 interface Props {
-  title: string
-  description?: string
+  title: string;
+  description?: string;
 }
 
-const { title, description } = Astro.props
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
-<html lang='es'>
+<html lang="es">
   <Head title={title} description={description} />
-  <body class='scroll-smooth'>
+  <body class="scroll-smooth bg-primary">
     <!-- Todo: Agregar header -->
-    <main class='mb-20'>
+    <main class="mb-20">
       <slot />
     </main>
     <!-- Todo: Agregar footer -->
