fix: update icon import paths to use alias for better readability

--- a/src/components/dashboard/ui/Sidebar.astro
+++ b/src/components/dashboard/ui/Sidebar.astro
@@ -1,6 +1,6 @@
 ---
-import DBSmile from '../../../icons/dashboard/db-smile.svg'
-import DOCSmile from '../../../icons/dashboard/doc-smile.svg'
+import DBSmile from '@icons/dashboard/db-smile.svg'
+import DOCSmile from '@icons/dashboard/doc-smile.svg'
 
 const { currentPath = '/' } = Astro.props
 
