--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Head from "@components/seo/Head.astro";
+import Navbar from "@components/shared/Navbar.astro";
 import "@styles/global.css";
 
 interface Props {
@@ -13,9 +14,9 @@ const { title, description } = Astro.props;
 <!doctype html>
 <html lang="es">
   <Head title={title} description={description} />
-  <body class="scroll-smooth bg-primary">
-    <!-- Todo: Agregar header -->
-    <main class="mb-20">
+  <body class="bg-primary scroll-smooth">
+    <Navbar />
+    <main class="container mb-20">
       <slot />
     </main>
     <!-- Todo: Agregar footer -->
