--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,3 +11,15 @@
   --font-primary: var(--font-space-mono);
   --font-secondary: var(--font-raleway);
 }
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 1.3rem;
+  @media (width >= --theme(--breakpoint-sm)) {
+    max-width: none;
+    padding-inline: 2rem;
+  }
+  @media (width >= 1200px) {
+    max-width: 1200px;
+  }
+}
