--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -1,8 +1,7 @@
 ---
-import DashboardLayout from '@layouts/DashboardLayout.astro'
-import Navigation from './Navigation.astro'
+import DashboardLayout from "@layouts/DashboardLayout.astro";
 ---
 
-<DashboardLayout title='Dashboard'>
-  <Navigation />
+<DashboardLayout title="Dashboard">
+  <h1>Home</h1>
 </DashboardLayout>
