--- a/src/pages/dashboard/posts/index.astro
+++ b/src/pages/dashboard/posts/index.astro
@@ -1,11 +1,9 @@
 ---
-import DashboardLayout from '@layouts/DashboardLayout.astro'
-import Navigation from '../Navigation.astro'
+import DashboardLayout from "@layouts/DashboardLayout.astro";
 ---
 
-<DashboardLayout title='posts'>
-  <Navigation />
-  <div class='p-8'>
+<DashboardLayout title="Posts">
+  <div class="p-8">
     <h1>Posts</h1>
   </div>
 </DashboardLayout>
