feat: add footer

--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -12,7 +12,7 @@ const routes = [
 ---
 
 <header
-  class="bg-complementary fixed top-0 z-50 flex h-20 w-full border-b shadow-md duration-300"
+  class="bg-complementary border-0.5 fixed top-0 z-50 flex h-20 w-full border-b border-b-white shadow-md duration-300"
   id="main-header"
 >
   <nav class="container flex items-center justify-between">
