--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,8 +1,5 @@
 ---
-import DashboardLayout from '@layouts/DashboardLayout.astro'
-import Sidebar from '@components/dashboard/ui/Sidebar.astro'
+import Layout from "@layouts/Layout.astro";
 ---
 
-<DashboardLayout title='Dashboard'>
-  <Sidebar />
-</DashboardLayout>
+<Layout title="Blog" />
