--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Head from "@components/seo/Head.astro";
 import Navbar from "@components/shared/Navbar.astro";
+import Footer from "@components/shared/Footer.astro";
 import "@styles/global.css";
 
 interface Props {
@@ -16,9 +17,11 @@ const { title, description } = Astro.props;
   <Head title={title} description={description} />
   <body class="bg-primary scroll-smooth">
     <Navbar />
+
     <main class="container mb-20">
       <slot />
     </main>
-    <!-- Todo: Agregar footer -->
+
+    <Footer />
   </body>
 </html>
