--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Home">
-  <h1 class="font-raleway">Astro</h1>
+  <h1 class="font-raleway">Pagina de inicio</h1>
 </Layout>
