--- a/src/pages/dashboard/posts/index.astro
+++ b/src/pages/dashboard/posts/index.astro
@@ -1,11 +1,12 @@
 ---
 import DashboardLayout from '@layouts/DashboardLayout.astro'
 import Navigation from '../Navigation.astro'
+import PostForm  from '@components/dashboard/post/PostForm'
 ---
 
 <DashboardLayout title='posts'>
   <Navigation />
   <div class='p-8'>
-    <h1>Posts</h1>
+    <PostForm client:load/>
   </div>
 </DashboardLayout>
