--- a/src/layouts/DashboardLayout.astro
+++ b/src/layouts/DashboardLayout.astro
@@ -16,7 +16,7 @@ const { title, description } = Astro.props;
   <Head title={title} description={description} />
   <body class="flex scroll-smooth">
     <Sidebar />
-    <main class="flex bg-gray-100">
+    <main class="flex w-full bg-gray-100">
       <slot />
     </main>
     <!-- Todo: Agregar footer -->
