--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -1,7 +1,14 @@
 ---
 import DashboardLayout from "@layouts/DashboardLayout.astro";
+
+const { user } = Astro.locals;
+
+if (!user || user.role !== "admin") {
+  return Astro.redirect("/");
+}
 ---
 
 <DashboardLayout title="Dashboard">
   <h1>Home</h1>
+  <span>{user?.role}</span>
 </DashboardLayout>
