--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,12 @@
 ---
 import Layout from "@layouts/Layout.astro";
+import Hero from "@components/home/Hero.astro";
+import LatestPost from "@components/home/LatestPost.astro";
+import Categories from "@components/home/Categories.astro";
 ---
 
-<Layout title="Home">
-  <h1 class="font-raleway">Pagina de inicio</h1>
+<Layout title="Devtalles community Blog">
+  <Hero />
+  <LatestPost />
+  <Categories />
 </Layout>
