--- a/src/layouts/AuthLayout.astro
+++ b/src/layouts/AuthLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Head from "@components/seo/Head.astro";
+import Navbar from "@components/shared/Navbar.astro";
 import "@styles/global.css";
 
 interface Props {
@@ -14,7 +15,7 @@ const { title, description } = Astro.props;
 <html lang="es">
   <Head title={title} description={description} />
   <body class="bg-primary scroll-smooth">
-    <!-- Todo: Agregar header -->
+    <Navbar />
     <main class="flex min-h-screen items-center justify-center">
       <slot />
     </main>
