--- a/src/components/search/Search.astro
+++ b/src/components/search/Search.astro
@@ -2,4 +2,10 @@
 
 ---
 
-<nav></nav>
+<nav class="border-accent-hover rounded-md border">
+  <input
+    type="text"
+    placeholder="Buscar..."
+    class="bg-accent/80 w-full rounded-md p-3 text-white placeholder-gray-400 focus:outline-none"
+  />
+</nav>
