--- a/src/components/post/gridpost/GridPost.astro
+++ b/src/components/post/gridpost/GridPost.astro
@@ -1,26 +1,61 @@
 ---
 import PostCard from "../postcard/PostCard.astro";
+import Heading from "@components/heading/Heading.astro";
 
 // TODO: Fetch posts from DB
 ---
 
-<section class="grid grid-cols-1 gap-10 md:grid-cols-2 lg:grid-cols-3">
-  <PostCard
-    imagePost="/images/code.jpg"
-    title="Post Title"
-    description="Post Description"
-    date="Post Date"
-  />
-  <PostCard
-    imagePost="/images/code.jpg"
-    title="Post Title"
-    description="Post Description"
-    date="Post Date"
-  />
-  <PostCard
-    imagePost="/images/code.jpg"
-    title="Post Title"
-    description="Post Description"
-    date="Post Date"
-  />
+<section class="mt-10">
+  <Heading component="h2" fontSize="medium">Últimos post</Heading>
+
+  <div class="mt-5 grid grid-cols-1 gap-10 md:grid-cols-2 lg:grid-cols-3">
+    <PostCard
+      imagePost="/images/code.jpg"
+      title="Introducción a React Server Components"
+      description="Descubre cómo los Server Components están revolucionando el desarrollo con React y Next.js."
+      date="17/09/2025"
+      tags={["React", "Next.js", "RSC"]}
+      slug="introduccion-a-react-server-components"
+    />
+    <PostCard
+      imagePost="/images/code.jpg"
+      title="Introducción a React Server Components"
+      description="Descubre cómo los Server Components están revolucionando el desarrollo con React y Next.js."
+      date="17/09/2025"
+      tags={["React", "Next.js", "RSC"]}
+      slug="introduccion-a-react-server-components"
+    />
+    <PostCard
+      imagePost="/images/code.jpg"
+      title="Introducción a React Server Components"
+      description="Descubre cómo los Server Components están revolucionando el desarrollo con React y Next.js."
+      date="17/09/2025"
+      tags={["React", "Next.js", "RSC"]}
+      slug="introduccion-a-react-server-components"
+    />
+    <PostCard
+      imagePost="/images/code.jpg"
+      title="Introducción a React Server Components"
+      description="Descubre cómo los Server Components están revolucionando el desarrollo con React y Next.js."
+      date="17/09/2025"
+      tags={["React", "Next.js", "RSC"]}
+      slug="introduccion-a-react-server-components"
+    />
+    <PostCard
+      imagePost="/images/code.jpg"
+      title="Introducción a React Server Components"
+      description="Descubre cómo los Server Components están revolucionando el desarrollo con React y Next.js."
+      date="17/09/2025"
+      tags={["React", "Next.js", "RSC"]}
+      slug="introduccion-a-react-server-components"
+    />
+    <PostCard
+      imagePost="/images/code.jpg"
+      title="Introducción a React Server Components"
+      description="Descubre cómo los Server Components están revolucionando el desarrollo con React y Next.js."
+      date="17/09/2025"
+      tags={["React", "Next.js", "RSC"]}
+      slug="introduccion-a-react-server-components"
+    />
+  </div>
 </section>
