fix(Navbar): remove client:load from AuthButtonNav component

--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -40,7 +40,7 @@ const { user } = Astro.locals;
       </div>
     </div>
 
-    <AuthButtonNav user={user} client:load />
+    <AuthButtonNav user={user} />
 
     <button
       id="open-menu-button"
