--- a/src/pages/dashboard/posts/index.astro
+++ b/src/pages/dashboard/posts/index.astro
@@ -1,11 +1,11 @@
 ---
 import DashboardLayout from '@layouts/DashboardLayout.astro'
-import Navigation from '../Navigation.astro'
+// import Navigation from '../Navigation.astro'
 import PostForm  from '@components/dashboard/post/PostForm'
 ---
 
 <DashboardLayout title='posts'>
-  <Navigation />
+  <!-- <Navigation /> -->
   <div class='p-8'>
     <PostForm client:load/>
   </div>
