--- a/src/layouts/DashboardLayout.astro
+++ b/src/layouts/DashboardLayout.astro
@@ -2,6 +2,7 @@
 import "@styles/global.css";
 import Sidebar from "@components/dashboard/ui/Sidebar.astro";
 import Head from "@components/seo/Head.astro";
+import DashboardTop from "@components/dashboard/ui/DashboardTop.astro";
 
 interface Props {
   title: string;
@@ -16,9 +17,16 @@ const { title, description } = Astro.props;
   <Head title={title} description={description} />
   <body class="flex scroll-smooth">
     <Sidebar />
-    <main class="flex w-full bg-accent">
+    <main class="bg-accent flex w-full flex-col p-10">
+      <DashboardTop />
       <slot />
     </main>
     <!-- Todo: Agregar footer -->
   </body>
 </html>
+
+<style is:global>
+  :root {
+    color-scheme: light dark;
+  }
+</style>
