--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -34,7 +34,11 @@ if (!isAuthed) return Astro.redirect("/auth/sign-in");
         </div>
 
         <div class="mt-5">
-          {user!.role === "admin" && <Link href="/dashboard">Dashboard</Link>}
+          {
+            user!.role === "admin" && (
+              <Link href="/dashboard/post">Dashboard</Link>
+            )
+          }
         </div>
 
         <button id="btn-logout"> <Text> Cerrar sesion </Text> </button>
